[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Adiel Adiel <adieltab16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3"
ryu = "^4.32"
tqdm = "^4.38"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
